--- a/GitHub Pages.html
+++ b/GitHub Pages.html
@@ -10,6 +10,7 @@
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/Question%202.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/Question%202.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/HW.html"> About me</a> &nbsp;</br>
+<br> <a href="https://jakewerber.github.io/Omis-475-sp19/bg2_JakeWerber.html.html". Background Exercise</a> &nbsp;</br> 
 </body>
 
 </html>
