--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,8 @@
     body{
         
         background-image: url("awesome-pontiac-gto-1920x1080-wallpaper-14440.jpg");
-    
+        background-position: top;
+        background-repeat: repeat;
     }
     </style>
 
