--- a/Werber.html
+++ b/Werber.html
@@ -13,11 +13,11 @@
     My favorite hobbies are playing video games and to play and watch baseball.  
 </p>
 <p> 
-    favorite game right now is the Battlefield series.  I like these games becasue it realistic and has big battles compared to Call of Duty.  I really enjor playing baseball 
+    My favorite game right now is the Battlefield series.  I like these games becasue it realistic and has big battles compared to Call of Duty.  I really enjor playing baseball 
 with my friends.  
 </P>
 <p> 
-    also enjoy to watch baseball,  I really enjoy to watch it at the park but I also like to watch it on TV.
+    Also enjoy to watch baseball,  I really enjoy to watch it at the park but I also like to watch it on TV.
 </p>
 <img src="Profesional Picture.png" alt="Profesional" width="333" height="360">
 </body>
