--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/Question%202.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/HW.html"> About me</a> &nbsp;</br>
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="https://jakewerber.github.io/Omis-475-sp19/Werber.html"> CSS practice </a> &nbsp;</br>
 </body>
 
 </html>
