--- a/myhobby.html
+++ b/myhobby.html
@@ -3,7 +3,7 @@
 
         
     <head>
-            <link rel="stylesheet" type="text/css" href="baseball.css">
+            <link rel="stylesheet" type="text/css" href="Baseball.css">
     </head>
  <header>
     <center> <h1> My Favaorite Hobby</h1> </center>
