--- a/myhobby.html
+++ b/myhobby.html
@@ -9,7 +9,7 @@
     <center> <h1> My Favaorite Hobby </h1> </center>
  </header>
 
- <body><center><article>
+ <center><article>
   <div> <h3> Baseball </h3> 
 
       <p>My favorite sport is baseball, I say this because I have played it since I was a little kid.  I have always loved finding a 
@@ -22,7 +22,7 @@
         <img src="ball-baseball-hobby-46859.jpg" alt="Baseball" width="390" height="250"><figcaption>A picture of a baseball</figcaption>
 </div> </center> 
 </article>
-</body>
+
 
 <footer>
    <center> <p>Email:<a href="mailto:webmaster@example.com">Jake Werber</a>.<br></p> </center>
