--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/HW.html"> About me</a> &nbsp;</br>
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
 <br> <a href="https://jakewerber.github.io/Omis-475-sp19/Werber.html"> CSS practice </a> &nbsp;</br>
+<br> <a href="https://jakewerber.github.io/Omis-475-sp19/myhobby.html"> My Hobby </a> &nbsp;</br>
 </body>
 
 </html>
