--- a/summer.html
+++ b/summer.html
@@ -44,7 +44,7 @@ Newport Wilderness Society</a> sponsors free meadow hikes at 9am every Saturday.
         <li>An orchid</li>
         <li>Official flower of Door County</li>
     </ul>
-    <br><img src="">                
+    <br><img src="ladys-slipper-735617_1920.jpg" width="290" height="190" alt="ladys slipper">                   
     <footer role="contentinfo"> Copyright &copy; 2016 Door County Wild Flowers<br>
     </footer>
   </main>
