--- a/summer.html
+++ b/summer.html
@@ -18,7 +18,7 @@
   </header>
   <nav role="navigation">
   <ul>
-    <li><a href="index.html">Home</a></li>
+    <li><a href="DoorCounty.html">Home</a></li>
     <li><a href="spring.html">Spring</a></li>
     <li><a href="summer.html">Summer</a></li>
     <li><a href="fall.html">Fall</a></li>
