--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <br> <a href="bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
 <br> <a href="Werber.html"> CSS practice </a> &nbsp;</br>
 <br> <a href="myhobby.html"> My Hobby </a> &nbsp;</br>
-<br> <a href="WildFlower.html"> My Hobby </a> &nbsp;</br>
+<br> <a href="WildFlower.html"> Wild Flower Page </a> &nbsp;</br>
 </body>
 
 </html>
