--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <u><H1>Jake Werbers OMIS 475 Webpage</H1></u>
 <br> <a href="Question 2.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
 <br> <a href="Question 2.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
-<br> <a href="]HW.html"> About me</a> &nbsp;</br>
+<br> <a href="HW.html"> About me</a> &nbsp;</br>
 <br> <a href="bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
 <br> <a href="Werber.html"> CSS practice </a> &nbsp;</br>
 <br> <a href="myhobby.html"> My Hobby </a> &nbsp;</br>
