--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <br> <a href="Werber.html"> CSS practice </a> &nbsp;</br>
 <br> <a href="myhobby.html"> My Hobby </a> &nbsp;</br>
 <br> <a href="WildFlower.html"> Wild Flower Page </a> &nbsp;</br>
-<br> <a href="survey.html"> Survey Example </a> &nbsp;</br>
+<br> <a href="Survey.html"> Survey Example </a> &nbsp;</br>
 </body>
 
 </html>
