--- a/Index/GitHub Pages.html
+++ b/Index/GitHub Pages.html
@@ -26,10 +26,18 @@
 
 <body>
 <u><H1>Jake Werbers OMIS 475 Webpage</H1></u>
-<br> <a href="https://jakewerber.github.io/Omis-475-sp19/Question%202.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
-<br> <a href="https://jakewerber.github.io/Omis-475-sp19/Question%202.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
-<br> <a href="https://jakewerber.github.io/Omis-475-sp19/HW.html"> About me</a> &nbsp;</br>
-<br> <a href="https://jakewerber.github.io/Omis-475-sp19/bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Question 2.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
+<br> <a href="Question 2.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
+<br> <a href="HW.html"> About me</a> &nbsp;</br>
+<br> <a href="bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="myhobby.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="fall.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Band8.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="sport8.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Werber.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Form.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Survey.html"> Background Exercise </a> &nbsp;</br> 
+
 </body>
 
 </html>
