--- a/Index/Index.html
+++ b/Index/Index.html
@@ -30,13 +30,13 @@
 <br> <a href="Question 2.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
 <br> <a href="HW.html"> About me</a> &nbsp;</br>
 <br> <a href="bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="myhobby.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="fall.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="Band8.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="sport8.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="Werber.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="Form.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="Survey.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="myhobby.html"> My Hobbys </a> &nbsp;</br> 
+<br> <a href="fall.html"> Flower Website </a> &nbsp;</br> 
+<br> <a href="Band8.html"> Favorite Band </a> &nbsp;</br> 
+<br> <a href="sport8.html"> Favorite Sport </a> &nbsp;</br> 
+<br> <a href="Werber.html"> Werber </a> &nbsp;</br> 
+<br> <a href="Form.html"> Form </a> &nbsp;</br> 
+<br> <a href="Survey.html"> Survey </a> &nbsp;</br> 
 
 </body>
 
