--- a/Index/Index.html
+++ b/Index/Index.html
@@ -26,17 +26,17 @@
 
 <body>
 <u><H1>Jake Werbers OMIS 475 Webpage</H1></u>
-<br> <a href="Question 2.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
-<br> <a href="Question 2.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
-<br> <a href="HW.html"> About me</a> &nbsp;</br>
-<br> <a href="bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
-<br> <a href="myhobby.html"> My Hobbys </a> &nbsp;</br> 
-<br> <a href="fall.html"> Flower Website </a> &nbsp;</br> 
-<br> <a href="Band8.html"> Favorite Band </a> &nbsp;</br> 
-<br> <a href="sport8.html"> Favorite Sport </a> &nbsp;</br> 
-<br> <a href="Werber.html"> Werber </a> &nbsp;</br> 
-<br> <a href="Form.html"> Form </a> &nbsp;</br> 
-<br> <a href="Survey.html"> Survey </a> &nbsp;</br> 
+<br> <a href="Chapter 2/ Question 2.7.html"> Assignment 1 Q2.7</a> &nbsp;</br>
+<br> <a href="Chapter 2/ Question 2.9.html"> Assignment 1 Q2.9</a> &nbsp;</br>
+<br> <a href="Practice/ HW.html"> About me</a> &nbsp;</br>
+<br> <a href="bg2_JakeWerber/ bg2_JakeWerber.html.html"> Background Exercise </a> &nbsp;</br> 
+<br> <a href="Chapter 6 Q10/ myhobby.html"> My Hobbys </a> &nbsp;</br> 
+<br> <a href="CHapter 7 Q8/ fall.html"> Flower Website </a> &nbsp;</br> 
+<br> <a href="Sport-Band/ Band8.html"> Favorite Band </a> &nbsp;</br> 
+<br> <a href="Sport-Band/ sport8.html"> Favorite Sport </a> &nbsp;</br> 
+<br> <a href="Werber/ Werber.html"> Werber </a> &nbsp;</br> 
+<br> <a href="Survey-form/ Form.html"> Form </a> &nbsp;</br> 
+<br> <a href="Survey-form/ Survey.html"> Survey </a> &nbsp;</br> 
 
 </body>
 
