--- a/Web Presence/ContactWP.html
+++ b/Web Presence/ContactWP.html
@@ -9,7 +9,7 @@
         <div class="w3-padding-64 w3-padding-large">
           <h1>Contact</h1>
           <p class="w3-opacity">GET IN TOUCH</p>
-          <form class="w3-container w3-card w3-padding-32 w3-white" action="/action_page.php" target="_blank">
+          <form method="POST" action="https://formspree.io/YOUREMAILHERE" target="_blank">
             <div class="w3-section">
               <label>Name</label>
               <input class="w3-input" style="width:100%;" type="text" required name="Name">
