--- a/Web Presence/SurveyWP.html
+++ b/Web Presence/SurveyWP.html
@@ -5,7 +5,7 @@
 
 <h1>Music Survey</h1>
 
-<form method="post" Action="http://webdevbasics.net/scripts/demo.php">
+<form method="POST" action="https://formspree.io/jake.werber@gmail.com">
 
 
         Name:<br>
