--- a/Web Presence/AboutMeWP.html
+++ b/Web Presence/AboutMeWP.html
@@ -36,12 +36,13 @@
               </div>
               <H1>About Me</H1>
               <p>Hi I am a 21 year old college student that currently goes to Northern Illinois University. At NIU I am studying OM&IS which stands for 
-                  Information Systems and operational Management.  In simpler terms I do a lot of data work and procurment/wherhouse work.  You get to choose
-                  one or the other to specialize in.  I choose the IS side, I chose the IS side because I love to work on computers and do math to find a solution 
-                  to a problem.  I am currently in my last year here at NIU and I loved every second of it.  I met some of the best people I have ever had the priviledge 
-                  of meeting who became my best friends.  I got the chance to join a fraternity (Sigma Nu) where I met alot of these people. I love to travel and
+                 Operational Management and Information Systems.  In simpler terms I do a lot of data work and procurement / warehouse work.  You get to choose
+                  one or the other to specialize in.  I choose the IS side because I love to work on computers and do math to find a solution 
+                  to a problem.  I am currently in my last year here at NIU and I loved every second of it.  I met some of the best people I have ever had the privilege 
+                  of meeting who became my best friends.  I got the chance to join a fraternity (Sigma Nu) where I met a lot of these people. I love to travel and
                   play sports with my friends.  You can find more information about that on the My Interest page.  I was born and raised in Illinois and love the state.
-                  Thats pretty much everything about me.  Thanks for looking at my websight!
+                  That’s pretty much everything about me.  Thanks for looking at my website!
+
               </p>
             </div>
             <div class="w3-half w3-blue-grey w3-container" style="height:700px">
