--- a/Web Presence/AccompWP.html
+++ b/Web Presence/AccompWP.html
@@ -39,24 +39,28 @@ body {
                   <div class="col" style="background-color:#aaa;">
                     <h2> Sigma Nu </h2>
                     <p> When I first came to NIU I had a friend in a fraternity called Sigma Nu. They convinced me to join which know is one of the best
-                        decisions I have ever made.  I have made alot of connections through out my time at Sigma Nu.  My greatest accomplishment at Sigma Nu was
-                    that I became what is now called "Head of General Membership".  In this positon if any non executive members had a problem or wanted to talk 
-                they came to me so that I could go to the executive board and voice the complaints of any member.  This was a huge step in my life and I am very glad
-                    I was able to this.      </p>
+	                        decisions I have ever made.  I have made a lot of connections throughout my time at Sigma Nu.  My greatest accomplishment at Sigma Nu was
+	                    that I became what is now called "Head of General Membership".  In this position if any non-executive members had a problem or wanted to talk 
+	                they came to me so that I could go to the executive board and voice the complaints of any member.  This was a huge step in my life, and I am very glad
+	                    I was able to this. 
+
+     </p>
                   </div>
                   <div class="col" style="background-color:#bbb;">
                     <h2> Community Service </h2>
-                    <p>Durring my time at NIU I have been able to help my community through community service.  I have had about 80 hours of community service while here
+                    <p>During my time at NIU I have been able to help my community through community service.  I have had about 80 hours of community service while here
                         at NIU.  One of the community service projects that I am most proud of is called NIU cares day.  At NIU cares day you are split into teams and then are 
                     assigned a place to go.  I was assigned to go to a Dekalb museum where we spent the day pulling weeds, laying wood chips, and doing other chores around
-                the property.  I loved this one the most because you got to see the before and after and when you are done you are proud that you helped. </p>
+                the property.  I loved this one the most because you got to see the before and after and when you are done you are proud that you helped.
+ </p>
                   </div>
                   <div class="col" style="background-color:#ccc;">
                     <h2> Other Accomplishments </h2>
-                    <p>The last accomplishment that I will talk about is my time in other organizations, I was in APICS and CAB.  APICS is a opertional Managment
-                        club here on campus were you tour wherehouses and other production facilities.  CAB stands for campus activitey board which is an school organization that
-                        holds events for the students here at NIU.  I am happy with my decision to joing the organization and help educate my self and help the students
+                    <p>The last accomplishment that I will talk about is my time in other organizations, I was in APICS and CAB.  APICS is a Operational Management
+                        club here on campus where you tour warehouses and other production facilities.  CAB stands for campus activity board which is a school organization that
+                        holds events for the students here at NIU.  I am happy with my decision to joining the organization and help educate myself and help the students
                         here at NIU have more fun while at school.
+
                     </p>
                   </div>
                 </div>
