--- a/Web Presence/AccomplishmentsWP.html
+++ b/Web Presence/AccomplishmentsWP.html
@@ -92,15 +92,17 @@ h3 {
         <div class="col-container">
           <div class="col" style="background-color:#aaa;">
             <h2><a href="ISWP.html" target="_blank">Information Systems</a></h2>
-            <p>     Information Systems is all about data managment and using analytical tools to find out advantages for the company to help them succed. In my information system classes i have completed many projects. These projects include working with SAS MySQL and many more
-                data managment systems. My best project was my SQL project because I worked the hardest and I did a really good job on it.
+            <p>    Information Systems is all about data management and using analytical tools to find out advantages for the company to help them succeed. In my information system classes i have completed many projects. These projects include working with SAS MySQL and many more
+                data management systems. My best project was my SQL project because I worked the hardest and I did a really good job on it.
+
             </p>
           </div>
           <div class="col" style="background-color:#bbb;">
             <h2><a href="OMWP.html" target="_blank">Operation Managment</a></h2>
-            <p>Operation Managment in a nut shell is all about helping your company moving or buying products through procurment or
-                about trying to figure out where is the best place to put a new wherehouse.  The Accomplishment I choose for operation managment
-            is the one I did for my SAP class. </p>
+            <p>Operation Management in a nut shell is all about helping your company moving or buying products through procurement or
+                about trying to figure out where is the best place to put a new warehouse.  The Accomplishment I choose for operation management
+            is the one I did for my SAP class.
+ </p>
           </div>
           <div class="col" style="background-color:#ccc;">
             <h2><a href="AccompWP.html" target="_blank">NIU Accomplishments</a> </h2>
