--- a/Web Presence/Interest.html
+++ b/Web Presence/Interest.html
@@ -22,16 +22,17 @@
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
       <h2>Traveling</h2>
-      <p>I love to travel all around the world. I love to travel becasue both of my parents work for United Airlines so I get to travel
+      <p>I love to travel all around the world. I love to travel because both of my parents work for United Airlines, so I get to travel
             all around the world.  I have been to <ul>
                     <li>Paris</li>
                     <li>Rome</li>
                     <li>England</li>
                     <li>Germany</li>
-                    <li>Carribean Countries</li>
+                    <li>Caribbean Countries</li>
                     <li>South America Countries</li>
                   </ul>  
-          My favorite place to travel was Rome.  Rome was my favorite because the people are nice the sights are beautiful and the food is amazing.</p>
+          My favorite place to travel was Rome.  Rome was my favorite because the people are nice the sights are beautiful, and the food is amazing.
+</p>
     </div>
     <div class="w3-row">
       <div class="w3-half">
@@ -63,11 +64,12 @@
   <div class="w3-half w3-indigo w3-container" style="min-height:800px">
     <div class="w3-padding-64 w3-center">
       <h2>Sports</h2>
-      <p>My other biggest interest has to be sports.  I have loved sports since I was a young kid, I have always had a interest in playing even though
+      <p>My other biggest interest must be sports.  I have loved sports since I was a young kid, I have always had a interest in playing even though
           I wasn't very good.  I have always loved to watch them as well as play them with my friends or on a minor league team.  My favorite sport is baseball,
-          I have played since I could rememeber.<img src="Cubs.png" alt="Pineapple" style="width:170px;height:170px;margin-left:15px;">  My favorite positon was catcher because I got to be in every play.  I also enjoy watching my favorite baseball team the
-          Chicago Cubs.  My other favorite sport is Football that is american football.  I was never good at playing football so I mainly just watched it with 
-          my dad.  My Favorite team is the Chicago Bears, I am hoping for a superbowl win this year.
+          I have played since I could remember.<img src="Cubs.png" alt="Pineapple" style="width:170px;height:170px;margin-left:15px;">  My favorite position was catcher because I got to be in every play.  I also enjoy watching my favorite baseball team the
+          Chicago Cubs.  My other favorite sport is Football that is American football.  I was never good at playing football, so I mainly just watched it with 
+          my dad.  My Favorite team is the Chicago Bears, I am hoping for a Superbowl win this year.
+
           <br>
           <img src="Bears.png" alt="Pineapple" style="width:300px;height:200px;">
       </p>
