--- a/Web Presence/OMWP.html
+++ b/Web Presence/OMWP.html
@@ -48,9 +48,10 @@ div.relative {
 
 <body>
     <P>For this accomplishment my group and I had to do research and interview people for our topic which was Kaizen.  In this paper
-        we had to talk about Kaizen what it is used for and does it work when does it not work.  We interviewed one a friend of of one of the 
-        guys in our group who work for the airforce.  His job was to use kaizen to help make the quality of their work better and more efficent.
+        we had to talk about Kaizen what it is used for and does it work when does it not work.  We interviewed one a friend of one of the 
+        guys in our group who work for the Air Force.  His job was to use kaizen to help make the quality of their work better and more efficient.
         The paper was about 20 pages long and is written well.  Please click on the word doc picture to view the paper.
+
 
    
 
