--- a/Web Presence/ContactWP.html
+++ b/Web Presence/ContactWP.html
@@ -2,7 +2,7 @@
 <link rel="stylesheet" href="Web Presence CSS.css">
 
 <marquee width="100%" direction="left" height="30">
-    PLease contact me at anytime!!
+    Please contact me at anytime!!
 </marquee>
 
 <body style="background-color:powderblue;">
