--- a/Web Presence/AccomplishmentsWP.html
+++ b/Web Presence/AccomplishmentsWP.html
@@ -92,7 +92,7 @@ h3 {
         <div class="col-container">
           <div class="col" style="background-color:#aaa;">
             <h2><a href="ISWP.html" target="_blank">Information Systems</a></h2>
-            <p>    Information Systems is all about data management and using analytical tools to find out advantages for the company to help them succeed. In my information system classes i have completed many projects. These projects include working with SAS MySQL and many more
+            <p>    Information Systems is all about data management and using analytical tools to find out advantages for the company to help them succeed. In my information system classes i have completed many projects. These projects include working with SAS, MySQL and many more
                 data management systems. My best project was my SQL project because I worked the hardest and I did a really good job on it.
 
             </p>
