--- a/Web Presence/SurveyWP.html
+++ b/Web Presence/SurveyWP.html
@@ -3,7 +3,7 @@
        
       
 
-<h1>Music Survey</h1>
+<h1>Website Survey</h1>
 
 <form method="POST" action="https://formspree.io/jake.werber@gmail.com">
 
