--- a/Group Project/Mechanics.html
+++ b/Group Project/Mechanics.html
@@ -27,7 +27,7 @@
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="generic.html">Cars for Sale</a></li>
-					<li><a href="elements.html">Parts</a></li>
+					<li><a href="CarParts.html">Parts</a></li>
 					<li><a href="elements.html">Mechanics</a></li>
 					<li><a href="elements.html">Blog</a></li>
 				</ul>
@@ -39,8 +39,24 @@
 				<p>We are dedicated to selling and showing the best classic cars in Illinois</p>
 			</section>
 
-           <center> <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Mechanics%20near%20dekalb&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.emojilib.com">emojilib.com</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:fit-content;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:fit-content;}</style></div>
-           </center>
+           <center> <section id="one" class="wrapper style1">
+				<div class="inner">
+					<article class="feature left">
+						<div class="content"><div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Mechanics%20near%20dekalb&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.emojilib.com">emojilib.com</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:fit-content;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:fit-content;}</style></div>
+                    </div>
+                </article>
+            </div>
+        </section>
+     </center>
+
+           <section id="three" class="wrapper style3 special">
+            <div class="inner">
+                <header class="major narrow	">
+                  
+                </ul>
+            </div>
+        </section>
+
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
