--- a/Group Project/index.html
+++ b/Group Project/index.html
@@ -26,10 +26,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Cars for Sale</a></li>
-					<li><a href="elements.html">Parts</a></li>
+					<li><a href="cars.html">Cars for Sale</a></li>
+					<li><a href="parts.html">Parts</a></li>
 					<li><a href="Mechanics.html">Mechanics</a></li>
-					<li><a href="elements.html">Blog</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
 
@@ -39,17 +39,32 @@
 				<p>We are dedicated to selling and showing the best classic cars in Illinois</p>
 			</section>
 
+
+			<section id="one" class="wrapper style1">
+					<div class="inner">
+							<article class="feature right">
+									<span class="image"><img src="images/pic02.jpg" alt="" /></span>
+							<div class="content">
+								<center><h2>About us</h2></center>
+								<p>We are a classic car website that wants to provide classic car enthusiests with the ultimate
+									place to browse, buy, service, and talk about their classic cars.
+								</p>
+								<ul class="actions">
+								
+							</div>
+						</article>
+				</section>
 		<!-- One -->
 			<section id="one" class="wrapper style1">
 				<div class="inner">
 					<article class="feature left">
 						<span class="image"><img src="images/pic01.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+						<center><h2>Car Name</h2></center>
+							<p>Description about the car</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="#" class="button alt">Learn more about car</a>
 								</li>
 							</ul>
 						</div>
@@ -57,11 +72,11 @@
 					<article class="feature right">
 						<span class="image"><img src="images/pic02.jpg" alt="" /></span>
 						<div class="content">
-							<h2>Integer vitae libero acrisus egestas placerat  sollicitudin</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est.</p>
+							<center><h2>Car Name</h2></center>
+							<p>Description about the car</p>
 							<ul class="actions">
 								<li>
-									<a href="#" class="button alt">More</a>
+									<a href="#" class="button alt">Learn More about the car</a>
 								</li>
 							</ul>
 						</div>
@@ -73,8 +88,8 @@
 			<section id="two" class="wrapper special">
 				<div class="inner">
 					<header class="major narrow">
-						<h2>Aliquam Blandit Mauris</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+						<h2>Parts for Sale</h2>
+						<p>Click on the part you need</p>
 					</header>
 					<div class="image-grid">
 						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -96,11 +111,11 @@
 			<section id="three" class="wrapper style3 special">
 				<div class="inner">
 					<header class="major narrow	">
-						<h2>Magna sed consequat tempus</h2>
-						<p>Ipsum dolor tempus commodo turpis adipiscing Tempor placerat sed amet accumsan</p>
+						<h2>Find A Mechanic Near You</h2>
+						
 					</header>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Magna feugiat</a></li>
+						<li><a href="#" class="button big alt">Click Here</a></li>
 					</ul>
 				</div>
 			</section>
@@ -110,7 +125,7 @@
 				<div class="inner">
 					<header class="major narrow">
 						<h2>Get in touch</h2>
-						<p>Ipsum dolor tempus commodo adipiscing</p>
+						<p>Let us know if you have a car you want to sell</p>
 					</header>
 					<form action="#" method="POST">
 						<div class="container 75%">
@@ -133,21 +148,21 @@
 					</form>
 				</div>
 			</section>
-
+		
 		<!-- Footer -->
 			<footer id="footer">
 				<div class="inner">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-facebook">
+						<li><a href="http://www.facebook.com" class="icon fa-facebook">
 							<span class="label">Facebook</span>
 						</a></li>
-						<li><a href="#" class="icon fa-twitter">
+						<li><a href="http://www.twitter.com" class="icon fa-twitter">
 							<span class="label">Twitter</span>
 						</a></li>
-						<li><a href="#" class="icon fa-instagram">
+						<li><a href="http://www.instagram.com" class="icon fa-instagram">
 							<span class="label">Instagram</span>
 						</a></li>
-						<li><a href="#" class="icon fa-linkedin">
+						<li><a href="http://www.linkedin.com" class="icon fa-linkedin">
 							<span class="label">LinkedIn</span>
 						</a></li>
 					</ul>
