--- a/Group Project/index.html
+++ b/Group Project/index.html
@@ -89,7 +89,7 @@
 				<div class="inner">
 					<header class="major narrow">
 						<h2>Parts for Sale</h2>
-						<p>Click on the part you need</p>
+						<p>Find the parts you need</p>
 					</header>
 					<div class="image-grid">
 						<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
@@ -102,7 +102,7 @@
 						<a href="#" class="image"><img src="images/pic10.jpg" alt="" /></a>
 					</div>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Tempus Aliquam</a></li>
+						<li><a href="parts.html" class="button big alt">Parts</a></li>
 					</ul>
 				</div>
 			</section>
@@ -115,7 +115,7 @@
 						
 					</header>
 					<ul class="actions">
-						<li><a href="#" class="button big alt">Click Here</a></li>
+						<li><a href="Mechanics.html" class="button big alt">Click Here</a></li>
 					</ul>
 				</div>
 			</section>
