--- a/Group Project/CarsForSale.html
+++ b/Group Project/CarsForSale.html
@@ -29,7 +29,7 @@
 					<li><a href="CarsForSale.html">Cars for Sale</a></li>
 					<li><a href="CarParts.html">Parts</a></li>
 					<li><a href="Mechanics.html">Mechanics</a></li>
-					<li><a href="elements.html">Blog</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
 
