--- a/Group Project/Mechanics.html
+++ b/Group Project/Mechanics.html
@@ -26,10 +26,10 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Cars for Sale</a></li>
+					<li><a href="CarsForSale.html">Cars for Sale</a></li>
 					<li><a href="CarParts.html">Parts</a></li>
-					<li><a href="elements.html">Mechanics</a></li>
-					<li><a href="elements.html">Blog</a></li>
+					<li><a href="Mechanics.html">Mechanics</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>
 
