--- a/Group Project/blog.html
+++ b/Group Project/blog.html
@@ -26,8 +26,8 @@
 			<nav id="nav">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="cars.html">Cars for Sale</a></li>
-					<li><a href="parts.html">Parts</a></li>
+					<li><a href="CarsForSale.html">Cars for Sale</a></li>
+					<li><a href="CarParts.html">Parts</a></li>
 					<li><a href="Mechanics.html">Mechanics</a></li>
 					<li><a href="blog.html">Blog</a></li>
 				</ul>
