--- a/Group Project/index.html
+++ b/Group Project/index.html
@@ -127,7 +127,7 @@
 						<h2>Get in touch</h2>
 						<p>Let us know if you have a car you want to sell</p>
 					</header>
-					<form action="#" method="POST">
+					<form method="POST" action="https://formspree.io/jake.werber@gmail.com">
 						<div class="container 75%">
 							<div class="row uniform 50%">
 								<div class="6u 12u$(xsmall)">
