--- a/Group Project/CarsForSale.html
+++ b/Group Project/CarsForSale.html
@@ -87,7 +87,7 @@
                             <div class="content">
                                 <h2>1970 Pontiac GTO</h2>
                                 <p>This two door Pontiac GTO is in great condition and runs great.  Orginal engine and no after market parts.  For more information contact owner.
-									<a href="mailto:peterparker@gmail.com" target="_blank">Please click on this to email the owner.</a>
+									<a href="mailto:peterparker@gmail.com" >Please click on this to email the owner.</a>
 								</p>
                                
                             </div>
