--- a/Group Project/index.html
+++ b/Group Project/index.html
@@ -37,7 +37,7 @@
 			<section id="one" class="wrapper style1">
 					<div class="inner">
 							<article class="feature right">
-									<span class="image"><img src="images/" alt="" /></span>
+									<span class="image"><img src="images/1956-Chevrolet-Bel-Air-Main-2.jpg" alt="" /></span>
 							<div class="content">
 								<center><h2>About us</h2></center>
 								<p>We are a classic car website that wants to provide classic car enthusiests with the ultimate
