--- a/Group Project/blog.html
+++ b/Group Project/blog.html
@@ -61,7 +61,7 @@
 						<h2>Submit A Post</h2>
 						
 					</header>
-					<form action="#" method="POST">
+					<form method="POST" action="https://formspree.io/jake.werber@gmail.com">
 						<div class="container 75%">
 							<div class="row uniform 50%">
 								<div class="6u 12u$(xsmall)">
