--- a/Group Project/car.html
+++ b/Group Project/car.html
@@ -28,6 +28,13 @@
                 }
                 </style>
 	</head>
+
+	<header id="header" class="alt">
+		<h1><a href="index.html">JW Classic Cars</a></h1>
+		<a href="#nav">Menu</a>
+	</header>
+
+	
 	<body class="landing">
 
 		<!-- Header -->
