--- a/Group Project/CarsForSale.html
+++ b/Group Project/CarsForSale.html
@@ -50,7 +50,7 @@
 					<article class="feature left">
 						<span class="image"><img src="images/1967-pontiace-firebird-convertible-sprint-edition-1.JPG" alt="" /></span>
 						<div class="content">
-							<h2>1967 Pontiac Firebird</h2>
+							<h2><a href="car.html">1967 Pontiac Firebird</a></h2>
 							<p>This is a 1967 convertible Pontiac Firebird that is has been in one family its whole life and has around 80k miles on it.  For more information contact the owner.
 								<a href="mailto:jsmith@gmail.com" target="_blank">Please click on this to email the owner.</a>
 							</p>
